--- a/prac.ipynb
+++ b/prac.ipynb
@@ -2,61 +2,175 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import pickle\n",
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
-    "import networkx as nx\n",
-    "import json"
+    "import time\n",
+    "\n",
+    "import dataloader\n",
+    "import evaluate\n",
+    "import model\n",
+    "import training\n",
+    "import influence\n",
+    "\n",
+    "import numpy as np\n",
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import torch.nn.functional as F\n",
+    "import torch.optim as optim\n",
+    "import optuna\n",
+    "\n",
+    "from importlib import reload\n",
+    "device='cpu'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_dir = './data'\n",
+    "dataset = dataloader.AmazonDataset(data_dir)\n",
+    "evaluater = evaluate.Evaluater(data_dir)\n",
+    "\n",
+    "\n",
+    "# 学習済みモデル読み込み\n",
+    "mf = torch.load('model.torch')\n",
+    "# loss_func定義\n",
+    "loss_func = nn.BCELoss()\n",
+    "\n",
+    "# 任意のテストデータ[u_i, i_i]ロード\n",
+    "# あるユーザに対してランキング上位のアイテム\n",
+    "target_user = dataset.user_list[0]\n",
+    "target_user = dataset.user_list.index(target_user)\n",
+    "ranking_idx = evaluater.predict(mf, target_user)\n",
+    "target_item = ranking_idx[0]\n",
+    "\n",
+    "\n",
+    "# trainingデータのinfluenceを計算\n",
+    "## [u_i, i_i]のどちらかを含むtrainingデータを持ってくる\n",
+    "train_data = []\n",
+    "for row in dataset.user_item_train_df.values:\n",
+    "    if target_user == row[0] or target_item == row[1]:\n",
+    "        train_data.append(row)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "tensor(-2.1051e-07, grad_fn=<DivBackward0>)"
+     },
+     "metadata": {},
+     "execution_count": 20
+    }
+   ],
+   "source": [
+    "reload(influence)\n",
+    "test_data = [target_user, target_item]\n",
+    "influ = influence.get_influence(loss_func, train_data[0], test_data, mf)\n",
+    "influ"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "       reviewerID        asin\n0  A1V6B6TNIC10QE  0143026860\n1  A2F5GHSXFQ0W6J  0143026860\n2  A1572GUYS7DGSR  0143026860\n3   A1PSGLFK1NSVO  0143026860\n4   A6IKXKZMTKGSC  0143026860",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>reviewerID</th>\n      <th>asin</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>A1V6B6TNIC10QE</td>\n      <td>0143026860</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>A2F5GHSXFQ0W6J</td>\n      <td>0143026860</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>A1572GUYS7DGSR</td>\n      <td>0143026860</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>A1PSGLFK1NSVO</td>\n      <td>0143026860</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>A6IKXKZMTKGSC</td>\n      <td>0143026860</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/plain": "351000"
      },
      "metadata": {},
-     "execution_count": 57
+     "execution_count": 40
     }
    ],
    "source": [
-    "user_item_df = pd.read_csv('./All_Beauty/user_item.csv')\n",
-    "user_item_df.head()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# k-coreグラフを作る\n",
-    "\n",
-    "- 少なくとも2-core\n",
-    "- [networkx.algorithms.core.k_core](https://networkx.github.io/documentation/stable/reference/algorithms/generated/networkx.algorithms.core.k_core.html#networkx.algorithms.core.k_core)\n"
+    "len(dataset.user_list) * 65 + len(dataset.item_list) * 65"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [],
    "source": [
-    "edges = user_item_df.values\n",
-    "G = nx.DiGraph()\n",
-    "G.add_edges_from(edges)"
+    "def get_loss(loss_func, train_data, model):\n",
+    "    user = torch.tensor([train_data[0]], dtype=torch.long, device=device)\n",
+    "    item = torch.tensor([train_data[1]], dtype=torch.long, device=device)\n",
+    "    pred = model(user, item)\n",
+    "    y = torch.tensor([1.])\n",
+    "    loss = loss_func(pred, y)\n",
+    "\n",
+    "    return loss\n",
+    "\n",
+    "def get_loss_gradient(model, loss):\n",
+    "    grads = torch.autograd.grad(loss, model.parameters(), create_graph = True, retain_graph = True)\n",
+    "    grad = []\n",
+    "    for g in grads:\n",
+    "        tmp = g.view(1, g.shape[0] * g.shape[1])\n",
+    "        grad.append(tmp)\n",
+    "\n",
+    "    return torch.cat(grad, dim=1)[0]\n",
+    "\n",
+    "def hessian_vector_product_2(model, grad_loss, v):\n",
+    "    w = torch.dot(grad_loss, v)\n",
+    "    w.backward()\n",
+    "    params = model.parameters()\n",
+    "    hv = []\n",
+    "    for p in params:\n",
+    "        hv.append(p.grad.view(1, p.shape[0]*p.shape[1]))\n",
+    "\n",
+    "    return torch.cat(hv, dim=1)[0]\n",
+    "\n",
+    "def hessian_vector_product(model, grad_loss, v):\n",
+    "    w = torch.dot(grad_loss, v)\n",
+    "    grads = torch.autograd.grad(w, model.parameters(), retain_graph=True)\n",
+    "    grad = []\n",
+    "    for g in grads:\n",
+    "        tmp = g.view(1, g.shape[0] * g.shape[1])\n",
+    "        grad.append(tmp)\n",
+    "\n",
+    "    return torch.cat(grad, dim=1)[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 161,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_influence(loss_func, train_data, test_data, model):\n",
+    "    loss = get_loss(loss_func, train_data, model)\n",
+    "\n",
+    "    grad_loss = get_loss_gradient(model, loss)\n",
+    "    print(grad_loss)\n",
+    "    v = torch.ones(grad_loss.size())\n",
+    "    hv = hessian_vector_product(model, grad_loss, v)\n",
+    "    print(hv.shape)\n",
+    "    #hv2 = hessian_vector_product_2(model, grad_loss, v)\n",
+    "\n",
+    "    hv3 = hessian_vector_product(model, grad_loss, v)\n",
+    "    #print(torch.norm(hv - hv2))\n",
+    "    print(torch.norm(hv - hv3))\n",
+    "    #return h_inverse_v"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 162,
    "metadata": {
     "tags": []
    },
@@ -64,146 +178,12 @@
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "edge 361605\nnode 356624\n"
+     "text": "tensor([0., 0., 0.,  ..., 0., 0., 0.], grad_fn=<SelectBackward>)\ntorch.Size([351000])\ntensor(0.)\n"
     }
    ],
    "source": [
-    "print('edge {}'.format(len(G.edges())))\n",
-    "print('node {}'.format(len(G.nodes())))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 50,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": "edge 56348\nnode 29092\n"
-    }
-   ],
-   "source": [
-    "k_G = nx.algorithms.core.k_core(G, 2)\n",
-    "print('edge {}'.format(len(k_G.edges())))\n",
-    "print('node {}'.format(len(k_G.nodes())))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 77,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "row = []\n",
-    "for edge in k_G.edges():\n",
-    "    row.append([edge[0], edge[1]])\n",
-    "\n",
-    "df = pd.DataFrame(row, columns=['reviewerID', 'asin'])\n",
-    "df.to_csv('All_Beauty_2core/user_item.csv', index=False)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Tripletを作る"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 60,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def parse(path):\n",
-    "    f = open(path, 'rb')\n",
-    "    for l in f:\n",
-    "        yield json.loads(l)\n",
-    "\n",
-    "def getDF(path):\n",
-    "    i = 0\n",
-    "    df = {}\n",
-    "    for d in parse(path):\n",
-    "        df[i] = d\n",
-    "        i += 1\n",
-    "    return pd.DataFrame.from_dict(df, orient='index')\n",
-    "\n",
-    "meta_df = getDF('meta_All_Beauty.json')\n",
-    "#df = getDF('Luxury_Beauty.json')\n",
-    "#meta_df = getDF('meta_Luxury_Beauty.json')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 78,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": "32992\n"
-    }
-   ],
-   "source": [
-    "# item ->(belong_to) brand\n",
-    "item_set = set(df['asin'])\n",
-    "item_brand_df = pd.concat([meta_df['asin'], meta_df['brand']], axis=1)\n",
-    "print(len(item_brand_df))\n",
-    "\n",
-    "del_idx = []\n",
-    "for i in range(len(meta_df)):\n",
-    "    if meta_df['asin'][i] not in item_set:\n",
-    "        del_idx.append(i)\n",
-    "\n",
-    "item_brand_df = item_brand_df.drop(del_idx)\n",
-    "brand = item_brand_df['brand'].values\n",
-    "count = 0\n",
-    "for b in brand:\n",
-    "    if type(b) != str:\n",
-    "        count += 1\n",
-    "\n",
-    "item_brand_df.to_csv('All_Beauty_2core/item_brand.csv', index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 70,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "4102"
-     },
-     "metadata": {},
-     "execution_count": 70
-    }
-   ],
-   "source": [
-    "len(set(list(df['asin'])))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 67,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "4102"
-     },
-     "metadata": {},
-     "execution_count": 67
-    }
-   ],
-   "source": [
-    "len(set(df['asin']))"
+    "mf = torch.load('model.torch')\n",
+    "get_influence(loss_func, train_data[0], test_data, mf)"
    ]
   },
   {
